2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* etc/uim: removed

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1:
	- removed xim_open_in_startup.
	- added input_method and --im.
	- 'GTK+ 1.2' -> 'GTK+ 1.2 or later'.
	- added 'Input Method' into 'GUI CONFIGURATOR' section.

2004-09-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* README, doc/ja/README.ja:
	- removed xim_open_in_startup.
	- added input_method.
	- added --enable-dnd, --enable-uim and --enable-iiimf.
	- reformatted to fit in 80 columns.

	* LICENCE: updated. (Contents are not changed)

	* kiklib/configure.in:
	applied SuSE's patches(mlterm-configure.patch).

	* aclocal.m4:
	applied SuSE's patch(autoconf.patch).

2004-09-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_im.h (x_im_t):
	- remove draw_preedit.
	- increased IM_API_VERSION.

	* inputmethod/uim/im_uim.c(drar_preedit),
	  inputmethod/iiimf/im_iiimf.c(drar_preedit): moved to ..
	* x_im.c (x_im_redraw_preedit): ..this

	* inputmethod/iiimf/im_iiimf.c: minor cleanups.

	* inputmethod/im_common.h:
	- minor cleanups.
	- fixed a memory leak.

2004-09-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/Makefile.in:
	* inputmethod/iiimf/Makefile.in:
	- fixed typo.
	- added LIBS_LOCAL.

	* inputmethod/iiimf/im_iiimf.c: fixed compilation errors with
	libiiimcf in Fedora Core 2.

2004-09-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/im_common.h: new file

	* xwindow/x_im.h (x_im_convert_encoding): moved to..
	* inputmethod/im_common.h (im_convert_encoding): ..this

2004-09-10 Seiichi SATO <ssato@sh.rim.or.jp>

	IIIMF (Internet Intranet Input Method Framework) support:

	* configure.in: added '--enable-iiimf'.

	* inputmethod/iiimf/im_iiimf.c: new file
	* inputmethod/iiimf/im_iiimf_keymap.h: new file
	* inputmethod/iiimf/Makefile.in: new file

	How to use:
	--im=iiimf .............  use IIIMF with the default language.
	--im=iiimf:ar ..........  use IIIMF with Arabic.
	--im=iiimf:ja:CannaLE ..  use IIIMF with Japanese using CannaLE