@@ -541,13 +541,13 @@ Conversion engine
 Specify the name of the conversion engine to be used.
 .PP
 Note this feature needs uim library.
-.\".PP
-.\".B IIIMF:
-.\".TP
-.\"Language
-.\"Specify the language id (RFC1766) and/or the language engine to be used.
-.\".PP
-.\"Note this feature needs IIIMCF library.
+.PP
+.B IIIMF:
+.TP
+Language
+Specify the language id (RFC1766) and/or the language engine to be used.
+.PP
+Note this feature needs IIIMCF library.
 .RE
 .TP
 Bidi (UTF-8 only)
